sdk/v0.5.6/reve.mdx
---
title: "reve"
icon: "square-m"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/functions/reve.py#L0\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
---
# <span style={{ 'color': 'gray' }}>module</span>&nbsp; pixeltable.functions.reve


Pixeltable [UDFs](https://docs.pixeltable.com/datastore/custom-functions) that wrap [Reve](https://app.reve.com/) image
generation API. In order to use them, the API key must be specified either with `REVE_API_KEY` environment variable,
or as `api_key` in the `reve` section of the Pixeltable config file.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; create()

```python Signature
@pxt.udf
create(
    prompt: pxt.String,
    *,
    aspect_ratio: pxt.String | None = None,
    version: pxt.String | None = None
) -> pxt.Image
```

Creates an image from a text prompt.

This UDF wraps the `https://api.reve.com/v1/image/create` endpoint. For more information, refer to the official
[API documentation](https://api.reve.com/console/docs/create).

**Parameters:**

- **`prompt`** (`pxt.String`): prompt describing the desired image
- **`aspect_ratio`** (`pxt.String | None`): desired image aspect ratio, e.g. '3:2', '16:9', '1:1', etc.
- **`version`** (`pxt.String | None`): specific model version to use. Latest if not specified.

**Returns:**

- `pxt.Image`: A generated image

**Examples:**

Add a computed column with generated square images to a table with text prompts:
```python
t.add_computed_column(img=reve.create(t.prompt, aspect_ratio='1:1'))
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; edit()

```python Signature
@pxt.udf
edit(
    image: pxt.Image,
    edit_instruction: pxt.String,
    *,
    version: pxt.String | None = None
) -> pxt.Image
```

Edits images based on a text prompt.

This UDF wraps the `https://api.reve.com/v1/image/edit` endpoint. For more information, refer to the official
[API documentation](https://api.reve.com/console/docs/edit)

**Parameters:**

- **`image`** (`pxt.Image`): image to edit
- **`edit_instruction`** (`pxt.String`): text prompt describing the desired edit
- **`version`** (`pxt.String | None`): specific model version to use. Latest if not specified.

**Returns:**

- `pxt.Image`: A generated image

**Examples:**

Add a computed column with catalog-ready images to the table with product pictures:
```python
t.add_computed_column(
    catalog_img=reve.edit(
        t.product_img,
        'Remove background and distractions from the product picture, improve lighting.',
    )
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; remix()

```python Signature
@pxt.udf
remix(
    prompt: pxt.String,
    images: pxt.Json,
    *,
    aspect_ratio: pxt.String | None = None,
    version: pxt.String | None = None
) -> pxt.Image
```

Creates images based on a text prompt and reference images.

The prompt may include `<img>0</img>`, `<img>1</img>`, etc. tags to refer to the images in the `images` argument.

This UDF wraps the `https://api.reve.com/v1/image/remix` endpoint. For more information, refer to the official
[API documentation](https://api.reve.com/console/docs/remix)

**Parameters:**

- **`prompt`** (`pxt.String`): prompt describing the desired image
- **`images`** (`pxt.Json`): list of reference images
- **`aspect_ratio`** (`pxt.String | None`): desired image aspect ratio, e.g. '3:2', '16:9', '1:1', etc.
- **`version`** (`pxt.String | None`): specific model version to use. Latest by default.

**Returns:**

- `pxt.Image`: A generated image

**Examples:**

Add a computed column with promotional collages to a table with original images:
```python
t.add_computed_column(
    promo_img=(
        reve.remix(
            'Generate a product promotional image by combining the image of the product'
            ' from <img>0</img> with the landmark scene from <img>1</img>',
            images=[t.product_img, t.local_landmark_img],
            aspect_ratio='16:9',
        )
    )
)
```

